# modelrepo

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: 404.html  objects.inv
docs/reference/modelrepo/: index.html
docs/reference/modelrepo/factory/: index.html
docs/reference/modelrepo/models/: index.html
docs/reference/modelrepo/repository/: index.html
docs/search/: search_index.json
examples/mysql/: config.ini  config.yml  containers.py  main.py  models.py
examples/nosql/: config.ini  config.yml  containers.py  main.py  models.py
examples/simple/: main.py
site/: 404.html  objects.inv
site/reference/chalifour/db/: index.html
site/reference/modelrepo/: index.html
site/reference/modelrepo/containers/: index.html
site/reference/modelrepo/models/: index.html
site/reference/modelrepo/registry/: index.html
site/search/: search_index.json
src/chalifour/db/: containers.py
src/modelrepo/: containers.py
src/modelrepo/registry/: _decorators.py  _model_repository_registry.py
src/modelrepo/repository/: _helpers.py  _in_memory_model_repository.py
tests/: test_factory.py
tests/chalifour/db/: test_containers.py
tests/modelrepo/: test_containers.py
tests/modelrepo/models/: test_base.py
tests/modelrepo/registry/: test_model_repository_registry.py
tests/modelrepo/repository/: test_mongo_db_model_repository.py  test_sql_alchemy_model_repository.py
tests/registry/: test_decorators.py
tests/repository/: test_helpers.py  test_in_memory_model_repository.py  test_model_repository.py
(+22 files in other folders)
